Task 6 finished 1/4;Now go home & continue

--- a/Task 6/index.html
+++ b/Task 6/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Task 6</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-$END$
+    <div class="container">
+        <div class="header">
+            <div class="issue">
+                2016.03
+            </div>
+            <div class="publisher">
+                &nbsp;ife.baidu.com
+            </div>
+        </div>
+        <hr>
+        <div class="content">
+            <div class="cover">
+                <div class="cover-info">
+                    <div class="cover-info-title">
+                        <p>about</p>
+                        <p>techonlogy</p>
+                    </div>
+                    <div class="cover-info-title-info">
+                        <p>About techonlogy about techonlogy about techonlogy</p>
+                        <div id="green">700</div>
+                        <div id="pink">
+                            <div id="pink_main">3.2</div>
+                            <div id="pink_sub">
+                                <div>css</div>
+                                <div>csscsscsscss</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <img src="../img/task_1_2_1.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
